<resources>
    <string name="app_name">Life Counter</string>
    <string name="Player1">Player1: 10 Lifes</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="plus5">+5</string>
    <string name="minus5">-5</string>
    <string name="Player2">Player2: 10 Lifes</string>
    <string name="Player3">Player3: 10 Lifes</string>
    <string name="Player4">Player4: 10 Lifes</string>
    <string name="Lose"></string>
</resources>
