<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:orientation="vertical">

    <TextView
            android:text="@string/Player1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt1" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.497"
            android:textSize="12sp" android:layout_weight="0" android:gravity="center|center_vertical"
            android:freezesText="true"/>
    <LinearLayout
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            android:id="@+id/layout1" android:layout_width="match_parent"
            android:orientation="horizontal" android:layout_weight="1" android:layout_height="0dp">
        <Button
                android:text="@string/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn1_plus" android:layout_weight="1"
                android:textSize="14sp"/>
        <Button
                android:text="@string/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn1_minus" android:layout_weight="1"
                android:textSize="12sp"/>
        <Button
                android:text="@string/plus5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn1_plus5" android:layout_weight="1"
                android:textSize="12sp"/>
        <Button
                android:text="@string/minus5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn1_minus5" android:layout_weight="1"
                android:textSize="12sp"/>
    </LinearLayout>
    <TextView
            android:text="@string/Player2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/layout1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:layout_weight="0"
            android:gravity="center" android:textSize="12sp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            android:id="@+id/layout2" android:layout_weight="1" android:layout_height="0dp">
        <Button
                android:text="@string/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn2_plus" android:layout_weight="1"
                android:textSize="12sp"/>
        <Button
                android:text="@string/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn2_minus" android:layout_weight="1"
                android:textSize="12sp"/>
        <Button
                android:text="@string/plus5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn2_plus5" android:layout_weight="1"
                android:textSize="12sp"/>
        <Button
                android:text="@string/minus5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn2_minus5" android:layout_weight="1"
                android:textSize="12sp"/>
    </LinearLayout>
    <TextView
            android:text="@string/Player3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/layout2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:gravity="center"
            android:layout_weight="0" android:textSize="12sp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txt3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            android:id="@+id/layout3" android:layout_weight="1" android:layout_height="0dp">
        <Button
                android:text="@string/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn3_plus" android:layout_weight="1"
                android:textSize="12sp"/>
        <Button
                android:text="@string/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn3_minus" android:layout_weight="1"
                android:textSize="12sp"/>
        <Button
                android:text="@string/plus5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn3_plus5" android:layout_weight="1"
                android:textSize="12sp"/>
        <Button
                android:text="@string/minus5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn3_minus5" android:layout_weight="1"
                android:textSize="12sp"/>
    </LinearLayout>
    <TextView
            android:text="@string/Player4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt4" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/layout3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:gravity="center"
            android:layout_weight="0" android:textSize="12sp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/layout4" android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txt4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_width="match_parent" android:layout_weight="1"
            android:layout_height="0dp">
        <Button
                android:text="@string/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn4_plus" android:layout_weight="1"
                android:textSize="12sp"/>
        <Button
                android:text="@string/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn4_minus" android:layout_weight="1"
                android:textSize="12sp"/>
        <Button
                android:text="@string/plus5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn4_plus5" android:layout_weight="1"
                android:textSize="12sp"/>
        <Button
                android:text="@string/minus5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn4_minus5" android:layout_weight="1"
                android:textSize="12sp"/>
    </LinearLayout>
    <TextView
            android:text="@string/Lose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtLose" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/layout4" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" android:gravity="center" android:layout_weight="0"
            android:textSize="12sp"/>


</LinearLayout>